Remove nginx-local configuration and update API documentation for new hierarchy endpoints. refactor frontend services to utilize updated API paths. Enhance dashboard components to fetch distinct plants and areas using the new hierarchy service methods. Remove unused endpoint and add getPUChildrenByParent
